<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="#00698c"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/totalBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#00698c"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dateBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textColor="#00698c"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="#00698c"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/name"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/quantity"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/unit_price"
                android:textColor="#FFFFFF" />
        </TableRow>
    </LinearLayout>


    <ListView
        android:id="@+id/lineitemList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgst"
            android:textColor="#00698c"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/cgst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sgst"
            android:textColor="#00698c"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/sgst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tender"
            android:textColor="#00698c"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>